# track_master_project

./: README.md
.github/workflows/: test.yml
src/arduino_mega_interface/hardware_interface/: driver_motor.cpp  driver_motor.hpp  hardware_interface.cpp  hardware_interface.hpp  hardware_interface.ino  motor_interface.cpp  motor_interface.hpp  status.cpp  status.hpp  unipolar_motor.hpp
src/arduino_mega_interface/hardware_interface_dc_motor/hardware_interface/: Motor.cpp  Motor.hpp  MotorController.cpp  MotorController.hpp  PinsConfig.hpp  hardware_interface.ino  status.cpp  status.hpp
src/arduino_mega_interface/hardware_interface_stepper/: driver_motor.cpp  driver_motor.hpp  hardware_interface.cpp  hardware_interface.hpp  hardware_interface.ino  motor_interface.cpp  motor_interface.hpp  pin_config.hpp  unipolar_motor.cpp
src/arduino_serial_interface_rs/: Cargo.toml  package.xml
src/arduino_serial_interface_rs/src/: main.rs
src/diffdrive_arduino/: CMakeLists.txt  DiffDriveArduinoHardwareInterface.xml  package.xml
src/diffdrive_arduino/include/diffdrive_arduino/: DiffDriveArduinoHardwareInterface.hpp
src/diffdrive_arduino/src/: DiffDriveArduinoHardwareInterface.cpp
src/frame_manager/: package.xml
src/frame_manager/frame_manager/: map_frame_publisher.py
src/joystick_control/: package.xml  setup.py
src/joystick_control/config/: joystick_params.yaml
src/joystick_control/joystick_control/: joystick_control_node.py
src/joystick_control/launch/: joystick_control.launch.py
src/msg_utils/: CMakeLists.txt  package.xml
src/msg_utils/msg/: BatteryStatus.msg  BoolArray.msg  FourMotorsFeedback.msg  FourMotorsStatus.msg  GpsVelocityHeading.msg  MotorFeedback.msg  MotorStatus.msg  WheelCommands.msg
src/nmea_gnss/: setup.py
src/nmea_gnss/nmea_gnss/: nmea_gnss_node.py
src/nmea_gnss_cpp/: CMakeLists.txt  package.xml
src/nmea_gnss_cpp/config/: nmea_gnss_params.yaml
src/nmea_gnss_cpp/include/nmea_gnss_cpp/: nmea_gnss.hpp  nmea_parser.hpp
src/nmea_gnss_cpp/launch/: nmea_gnss.launch.py
src/nmea_gnss_cpp/src/: nmea_gnss.cpp  nmea_parser.cpp
src/nmea_gnss_cpp/test/: parser_test.cpp
src/nmea_gnss_cpp/test/data/: valid_gga.txt
src/nmea_gnss_rs/: Cargo.toml  package.xml
src/nmea_gnss_rs/src/: main.rs  utils.rs
src/robot_control/: package.xml  setup.py
src/robot_control/config/: diff_drive_controller.yaml
src/robot_control/launch/: move_robot_gazebo.launch.py  move_robot_real.launch.py  robot_control.launch.py  robot_control_gazebo.launch.py
src/track_master/: CMakeLists.txt  package.xml
src/track_master/launch/: gazebo.launch.py  rsp_real.launch.py
src/track_master/urdf/: camera.xacro  gnss_sensor.xacro  imu_sensor.xacro  lidar.xacro  ros2_control.xacro  ros2_control_realbot.xacro  track_master_bot_real.urdf.xacro  tracker_master_bot.urdf.xacro
src/track_master_debug/: CMakeLists.txt
src/track_master_debug/track_master_debug/: wheel_commands_debug.py
src/track_master_localization/: package.xml
src/track_master_localization/src/: kalman_filter.cpp
src/track_master_localization/track_master_localization/: kalman_filter.py
src/track_master_real_launch/: package.xml  setup.cfg  setup.py
src/track_master_sim_launch/: package.xml  setup.cfg  setup.py
src/web_interface/: specifications.md
track_master_project/arduino_mega_interface/: README.md
track_master_project/arduino_mega_interface/hardware_interface/: driver_motor.cpp  hardware_interface.cpp  hardware_interface.hpp  hardware_interface.ino  motor_interface.cpp  motor_interface.hpp  unipolar_motor.cpp  unipolar_motor.hpp
track_master_project/arduino_mega_interface/specifications/: specifications.md
track_master_project/diffdrive_arduino/include/diffdrive_arduino/: DiffDriveArduinoHardwareInterface.hpp
track_master_project/diffdrive_arduino/src/: DiffDriveArduinoHardwareInterface.cpp
track_master_project/frame_manager/: setup.cfg  setup.py
track_master_project/frame_manager/frame_manager/: map_frame_publisher.py
track_master_project/joystick_control/: setup.py
track_master_project/joystick_control/config/: joystick_params.yaml
track_master_project/msg_utils/: CMakeLists.txt  package.xml
track_master_project/msg_utils/msg/: GpsVelocityHeading.msg
track_master_project/nmea_gnss/: package.xml  setup.cfg  setup.py
track_master_project/nmea_gnss/config/: gnss_params.yaml
track_master_project/nmea_gnss/nmea_gnss/: nmea_gnss_node.py  nmea_parser.py
track_master_project/nmea_gnss_cpp/: CMakeLists.txt
track_master_project/nmea_gnss_cpp/specifications/: specifications.md
track_master_project/nmea_gnss_cpp/src/: nmea_gnss_node.cpp
track_master_project/robot_control/config/: diff_drive_controller.yaml
track_master_project/robot_control/launch/: move_robot_real.launch.py  real_robot_control.launch.py  robot_control_gazebo.launch.py
track_master_project/track_master/: CMakeLists.txt
track_master_project/track_master/config/: config.rviz
track_master_project/track_master/launch/: gazebo.launch.py  rsp.launch.py
track_master_project/track_master/urdf/: chassis.xacro  point_cloud_lidar.xacro  robot_parameters.xacro  ros2_control.xacro  tracker_master_bot.urdf.xacro
track_master_project/track_master/worlds/: test_world.world
track_master_project/track_master_debug/: CMakeLists.txt  package.xml
track_master_project/track_master_debug/track_master_debug/: wheel_commands_debug.py
track_master_project/track_master_launcher/: package.xml  setup.cfg  setup.py
track_master_project/track_master_launcher/config/: paramaters.yaml 
track_master_project/track_master_localization/: CMakeLists.txt
track_master_project/track_master_localization/include/track_master_localization/: kalman_filter.hpp
