<?xml version="1.0"?>
<package format="2">
  <name>diffdrive_arduino</name>
  <version>0.0.1</version>
  <description>Hardware interface for a differential drive robot using Boost.Asio for serial communication with Arduino.</description>

  <maintainer email="tristanogandagaguerick@gmail.com">Tristan Guerick Agoumbi Ogandaga</maintainer>
  <license>BSD</license>

  <!-- Dependencies for building and running -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>Boost</build_depend>

  <depend>msg_utils</depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>Boost</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="hardware_interface">DiffDriveArduinoHardwareInterface.xml</pluginlib>
  </export>
</package>
