<?xml version="1.0"?>
<package format="3">
  <name>nmea_gnss_rs</name>
  <version>0.1.0</version>
  <description>
    A ROS 2 package written in Rust for parsing and handling NMEA GNSS data.
  </description>

  <maintainer email="tristanogandagaguerick@gmail.com">Tristan Guerick Agoumbi Ogandaga</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cargo</buildtool_depend>
  <build_depend>rclrs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>ament_cmake</build_depend>
  <build_depend>colcon-cargo</build_depend>

  <exec_depend>rclrs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <export>
    <build_type>ament_cargo</build_type>
    <rust>
      <workspace>false</workspace>
    </rust>
  </export>
</package>
